Fix pwm image being broken because file names are case sensitive

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                 <h3 id="Robotics_Lab">[REDACTED] Robotics Lab - Student Research Assistant (2016-2018)</h3>
                 <div class="center" style="display: flex; justify-content: center; align-items: center; flex-flow:wrap;">
                     <img src="./media/motor control overview.png" width="500" style="margin-left: 4px; margin-right: 4px;" onclick="CreateModalImage('./media/motor control overview.png');" />
-                    <img src="./media/motor control PWM.png" width="500" style="margin-top: 4px" onclick="CreateModalImage('./media/motor control PWM.png')" />
+                    <img src="./media/motor control pwm.png" width="500" style="margin-top: 4px" onclick="CreateModalImage('./media/motor control pwm.png')" />
                 </div>
                 <p>
                     The first project at the robotics lab was a motor control application in C for brushless DC motors utilizing the real-time operating system PXROS-HR
