--- a/index.html
+++ b/index.html
@@ -356,7 +356,8 @@
                 <p>
                     Hi, my name is Mara and I am primarily a C++ developer with experience in games and embedded systems. I feel most at home doing deep dives into debugging problems and
                     anything where I can have a metric to optimize (frame time, compile time, export time, etc.). I put out fires wherever and whenever they come up and try to help my team be productive
-                    by improving the tools they work with. Graphics are a particular fondness of mine, as evidenced by many pretty pictures below.
+                    by improving the tools they work with. Graphics are a particular fondness of mine, as evidenced by many pretty pictures below. I am comfortable with D3D11 and HLSL, familiar with many graphics concepts and techniques at a high level and have a general idea of how D3D12 works and regularly help out people in the DirectX Discord.
+
                 </p>
                 <table>
                     <tr><th>Languages</th><td>German (Native/C2), English (C1)</td></tr>
@@ -497,7 +498,7 @@
                 </p>
 
                 <hr />
-                <h3 id="CUDA_Mandelbrot">CUDA Mandelbrot Set Explorer (2017)<a href="https://github.com/Maraneshi/cuda-mandelbrot" class="project_link" target="_blank"><link-svg /></a></h3>
+                <h3 id="CUDA_Mandelbrot">CUDA Mandelbrot Set Explorer - University Project (2017)<a href="https://github.com/Maraneshi/cuda-mandelbrot" class="project_link" target="_blank"><link-svg /></a></h3>
                 <div class="center">
                     <img src="./media/mandelbrot_5_1920.jpg" width="482" onclick="CreateModalImage('./media/fullsize/mandelbrot_5_1920.jpg')" />
                     <img src="./media/mandelbrot_7_1440p.jpg" width="482" onclick="CreateModalImage('./media/fullsize/mandelbrot_7_1440p.jpg')" />
@@ -505,6 +506,7 @@
                 <p>
                     A <a href="https://github.com/Maraneshi/cuda-mandelbrot">Mandelbrot set visualizer</a> using CUDA and C++, displayed via an OpenGL-based GUI or command line bitmap file output.
                     I used C++ template specialization to generate optimized GPU kernels for each combination of fractal type, coloring variant and floating-point type.
+                    This was a university project and received a grade equivalent of 96%.
                 </p>
                 <p style="margin-bottom:2px">
                     The supported fractal type are:
@@ -533,7 +535,7 @@
                     As part of my university studies, I formed a team with two fellow students to make a small top-down shooter game in Unity (C#).
                     It is based on a Flash game called Bubble Tanks and features an infinite world of small arenas where the difficulty and number of enemies increases with distance from the starting position.
                     We utilized sparse arrays for generating the world in small chunks, the decorator pattern to dynamically apply modifiers to different base weapons and object pooling to minimize stutters.
-                    We were not graded on audiovisual quality and had several other projects due in the same semester, hence the bare-bones graphics in the video above.
+                    We were not graded on audiovisual quality and had several other projects due in the same semester, hence the bare-bones graphics in the video above, but the end result was still a 94% grade.
                 </p>
 
                 <hr />
@@ -561,7 +563,7 @@
                     (in the photo above we just attached a webcam for testing) and a LiDAR scanner attached to the robot determined the distance to the person in front of it. Through
                     a lot of measurements and some basic linear algebra and trigonometry, the height and relative position of the person are calculated in order to rotate the robot
                     and adjust the arm towards the person. The logic for all of this was integrated into the ROS (Robot Operating System) C++ framework running on Linux.
-                    This project led to two of us receiving the offer for the aforementioned job as student research assistants.
+                    This project led to two of us receiving the offer for the aforementioned job as student research assistants and a 98% grade.
                 </p>
 
                 <hr />
@@ -576,7 +578,7 @@
                     is itself realized as calling a service on the registry, so everything uses the same underlying mechanisms. Data marshaling is configurable per-service and the entire protocol is designed
                     to be versionable and backwards-compatible. The network communication happens directly via basic TCP sockets and can optionally be tunneled through the registry via an internal wrapper
                     service, which can also automatically handle different protocol versions and marshaling on both ends. The team consisted of 6 people and I was responsible for the protocol design and the
-                    entire corresponding backend implementation.
+                    entire corresponding backend implementation. The final grade was a perfect 100% score.
                 </p>
 
                 <hr />
