Add zoom-in cursor to images

--- a/index.html
+++ b/index.html
@@ -275,6 +275,10 @@
             top: 10px;
         }
 
+        img {
+            cursor: zoom-in;
+        }
+
     </style>
     <style title="CBV Dark Theme">
         /* based on VS-Dark from Monaco */
@@ -592,7 +596,7 @@
                 <p>
                     The team at W3D Hub received new assets for our game <a href="https://w3dhub.com/games/red-alert-a-path-beyond/">Red Alert: A Path Beyond</a> in 2018, some of them for brand new units and gameplay mechanics, so I wanted to celebrate
                     that by making some promotional renders in Blender, some of them reminiscent of cutscenes from the original <i>Red Alert</i> game
-                    (<a onclick="CreateModalImage('./media/w3drender_mig_cinematic.png')">MiG cinematic shot</a>, <a onclick="CreateModalImage('./media/w3drender_cruiser_cinematic.png')">Cruiser cinematic shot</a>).
+                    (<a style="cursor: pointer" onclick="CreateModalImage('./media/w3drender_mig_cinematic.png')">MiG cinematic shot</a>, <a style="cursor: pointer" onclick="CreateModalImage('./media/w3drender_cruiser_cinematic.png')">Cruiser cinematic shot</a>).
                     The fire/smoke and water shaders (the latter is pictured above) evolved a lot over the course of making these renders.
                     I had never used Blender or really any 3D software like this before, so for 5 days of work I think these are pretty good results.
                 </p>
